<resources>
    <string name="app_name">Google Photos Album Sync</string>
    <string name="login">Login …</string>
    <string name="logout">logout</string>
    <string name="titleUser">User</string>
    <string name="autorisations">Autorisations</string>
    <string name="user_unknown">user unknown</string>
    <string name="get_albums">Get albums</string>
    <string name="album">Album</string>
    <string name="no_album">No album</string>
    <string name="choose_album">Choose an album</string>
    <string name="need_album">You have to choose an album</string>
    <string name="choose_folder">Choose folder</string>
    <string name="folder">Folder</string>

    <string name="titleSync">Synchronisation</string>
    <string name="sync_now">Sync now</string>
    <string name="sync_starting">Sync starting</string>
    <string name="sync_in_progress">Sync in progress</string>
    <string name="sync_finished">Sync terminated</string>
    <string name="sync">sync</string>
    <string name="last_sync_time">Last sync time %s.</string>
    <string name="last_wallpaper_time">Last wallpaper time %s.</string>
    <string name="no_previous_sync">No previous sync.</string>
    <string name="button_synchronize_once">Synchronize une fois</string>
    <string name="button_wallpaper_once">Wallpaper une fois</string>

    <string name="titleResult">Sync results</string>
    <string name="no_result">No result</string>
    <string name="cancel">Cancel</string>
    <string name="error">An error occurred</string>

    <string name="full_album">Sync full album</string>
    <string name="choose_one">Sync random</string>
    <string name="choose_now">Choose now</string>

    <string name="reset_cache">Reset cache</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_explenation">Randomly retrieves only same photos. Leave empty to retrieve all photos.</string>

    <string name="settings">Settings</string>
    <string name="titleCacheMaxAge">Cache max age</string>
    <string name="textCacheMaxAge">Cache max age in hours</string>
    <string name="rename">Renaming</string>
    <string name="download_options_title">Options de téléchargement</string>
    <string name="scheduleSync">Schedule Sync</string>
    <string name="scheduleWallpaper">Schedule Wallpaper</string>

    <string name="TitleDownloadSection">Options de téléchargement</string>


    <string name="titileHomeFrequency">Fréquences</string>
    <string name="titleHomeFrequencyWallpaper">Fréquence changement de Fond d\'écran</string>
    <string name="titleHomeFrequencyDownload">Fréquence de Téléchargement de photos</string>
    <string name="titleHomeFrequencyUpdate">Fréquence de Détection de nouvelles photos</string>
    <string name="frequencyWallpaper">Fréquence fond d\'écran</string>
    <string name="frequencySync">Fréquence de téléchargement</string>
    <string name="frequenceWallpaperExplanation">Fréquence à laquelle le fond d\'écran est changé. La photo est choisie parmis celles qui ont précédement été téléchargées sur le téléphone.</string>
    <string name="frequenceSyncExplanation">Fréquence à laquelle les images sont téléchargées sur le téléphone. Les photos sont choisies parmis celle de l\'album. </string>
    <string name="frequenceUpdatePhotosExplenation">Fréquence à laquelle de nouvelle photos sont recherchées. Entre deux recherches de nouvelle photo, l\'application choisie des photos à téléchargées parmis celles qui étaient disponibles lors de la précédente rechcerche.</string>
    <string name="frequencyUpdatePhotos">Fréquence nouvelles photos</string>
    <string name="frequency_too_low">Fréquence min de 15 minutes</string>
    <string name="frequency_need_disable_first">Désactiver d\'abord le schedule</string>
    <string name="title_frequency_explanation">Aide sur les fréquences</string>

    <string name="placeHolder_month">Toutes les mois</string>
    <string name="placeholder_hour">Toutes les heures</string>
    <string name="placeholder_week">Toutes les semaines</string>

    <string name="lastTimesTitle">Dernières synchro</string>
    <string name="lastSyncLabel">Dernière synchronisation : </string>
    <string name="lastWallpaperTimeLabel">Dernier fond d\'écran :</string>
    <string name="lastUpdatePhotosLabel">"Dernière récupération des photos : "</string>
    <string name="channel_name">name</string>
    <string name="channel_description">description</string>
    <string name="requestGooglePermission">demander permission</string>


    <string name="titleStat">Statistiques</string>
    <string name="noStat">Pas de statistique</string>
    <string name="noDate">Pas de date</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="error_wallpaper_chooser">impossible de définir le fond d\'écran animé automatiquement</string>
    <string name="warning_wallpaper_not_active">Le fond d\'écran animée n\'est pas actif. Cliquez ici pour le faire.</string>
    <string name="warning_permission_denied">L\'application a perdu le droit d\'utiliser Google Photos. Cliquez ici pour l\'autoriser de nouveau.</string>

    <string name="wallpaper_description">description</string>
    <string name="schedule_details">schedule</string>
    <string name="hello_blank_fragment">Destination fragment</string>
    <string name="pick_frequency">Choisir une fréquence</string>
    <string name="placeholder_frequency">Choisissez une fréquence</string>
    <string name="frequencyGroup_subtitle">Activation et fréquences</string>
    <string name="text_wizard_step">Assistant : étape %1$d sur %2$d</string>
    <string name="wizard">Assistant</string>
    <string name="no_photo">Aucune photo à afficher.</string>
    <string name="resolve_no_photo">Lancer l\'application et executer une synchronisation.</string>
    <string name="explanation">Explication</string>
    <string-array name="frequency_wallpaper_label">
        <item>Jamais</item>
        <item>Toutes les 15 minutes</item>
        <item>Toutes les 30 minutes</item>
        <item>Toutes les heures</item>
        <item>Toutes les 2 heures</item>
        <item>Tous les jours</item>
    </string-array>
    <integer-array name="frequency_wallpaper_value">
        <item>-1</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>1440</item>
    </integer-array>

    <string-array name="frequency_sync_label">
        <item>Jamais</item>
        <item>A chaque wallpaper</item>
        <item>Tous les heures</item>
        <item>Toutes les 12 heures</item>
        <item>Tous les jours</item>
        <item>Toutes les semaines</item>
        <item>Toutes les mois</item>
    </string-array>
    <integer-array name="frequency_sync_value">
        <item>-1</item>
        <item>0</item>
        <item>1</item>
        <item>12</item>
        <item>24</item>
        <item>168</item>
        <item>720</item>
    </integer-array>

    <!-- hour -->
    <string-array name="frequency_update_label">
        <item>Jamais</item>
        <item>A chaque wallpaper</item>
        <item>Tous les jours</item>
        <item>Toutes les semaines</item>
        <item>Tous les mois</item>
        <item>Tous les trimestres</item>
    </string-array>
    <integer-array name="frequency_update_value">
        <item>-1</item>
        <item>0</item>
        <item>24</item>
        <item>168</item>
        <item>720</item>
        <item>2160</item>
    </integer-array>
    <string-array name="wizard_explanation">
        <item>Appuyez sur User\n\nCela permet de vous identifier avec votre compte Google et autoriser l\'application à accéder à vos photos.</item>
        <item>Appuyez sur Album.\n\nCela permet de choisir l\'album Google qui contient les photos que vous souhaitez mettre en fond d\'écran.</item>
        <item>Appuyez sur Folder.\n\nCela permet choisir le répertoire de votre téléphone dans lequel les photos seront enregistrées en local. L\'application va télécharger vos photos dans ce répertoire. Vous devrez autoriser l\'application à écrire sur votre téléphone.</item>
        <item>Appuyez sur Option de téléchargement puis sur Quantité.\n\nVous alle pouvoir choisir le nombre maximum de photos à télécharger.</item>
        <item>Appuyez sur Fréquences puis sur Fréquence fond d\'écran.\n\nCela permet de choisir la fréquence à laquelle le fond d\'écran est changé.</item>
        <item>Appuyez sur Fréquence de téléchargement.\n\nCela permet de choisir la fréquence à laquelle les photos sont téléchargées sur votre téléphone.</item>
        <item>Appuyez sur Fréquence nouvelle photos.\n\nCela permet de choisir la fréquence à laquelle l\'application va rechercher si des nouvelles photos ont été rajoutées à votre album Google. </item>
        <item>Appuyez sur le bouton SYNCHONISER UNE FOIS.\n\nCela permet de lancer une synchronisation. Les prochaines synchronisations seront automatiques.</item>
        <item>S\'il est visible, appuyez sur le bandeau orange.\n\nCela permet de choisir le fond d\'écran animé de l\'application.</item>
        <item>L\'application est maintenant totalement configuré. L\'Assistant est terminé.</item>
    </string-array>
</resources>
