<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.presenter.FragmentFrequencies">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="#AAA"
        android:showDividers="middle">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:divider="#AAA"
                android:orientation="horizontal"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:showDividers="middle">

                <LinearLayout
                    android:id="@+id/SectionFreqeuncyWallpaper"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titleHomeFrequencyWallpaper"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <TextView
                        android:id="@+id/textFrequencyWallpaper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/placeholder_hour"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/SectionFreqeuncySync"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titleHomeFrequencyDownload"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <TextView
                        android:id="@+id/textFrequencySync"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/placeholder_week"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/SectionFreqeuncyUpdatePhotos"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titleHomeFrequencyUpdate"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <TextView
                        android:id="@+id/textFrequencyUpdatePhotos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/placeHolder_month"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                </LinearLayout>
            </LinearLayout>
        </HorizontalScrollView>
        <RelativeLayout
            android:id="@+id/SectionActiveWallpaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            >
            <Switch
                android:id="@+id/SwitchWallPaper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Changement automatique du fond d'écran "
                android:textAppearance="@style/TextAppearance.AppCompat.Large">
            </Switch>

        </RelativeLayout>
    </LinearLayout>
</FrameLayout>