<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <!-- alert islive wallpaper not active -->
    <TextView
        android:id="@+id/warning_wallpaper_active"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWarning"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/warning_wallpaper_not_active"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/warning_wallpaper_active">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="#AAA"
                android:orientation="vertical"
                android:showDividers="middle"
                android:visibility="visible">

                <!-- login -->
                <RelativeLayout
                    android:id="@+id/SectionUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/titleUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titleUser"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <TextView
                        android:id="@+id/textUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/titleUser"
                        android:text="@string/user_unknown" />

                </RelativeLayout>
                <!-- Album -->
                <RelativeLayout
                    android:id="@+id/SectionAlbum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/titleAlbum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/album"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <TextView
                        android:id="@+id/textAlbum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/titleAlbum"
                        android:text="@string/no_album" />
                </RelativeLayout>
                <!-- Folder -->
                <RelativeLayout
                    android:id="@+id/SectionFolder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/titleFolder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/folder"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <TextView
                        android:id="@+id/textFolder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/titleFolder"
                        android:text="@string/folder" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/sectionDownloadOptions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="Options de téléchargement"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <!-- Frequencies -->
                <LinearLayout
                    android:id="@+id/sectionFrequencies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="16dp"
                    android:paddingBottom="0dp">

                    <TextView
                        android:id="@+id/titleFrequencies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="@string/frequencyGroup_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        app:layout_constraintTop_toBottomOf="@+id/sectionDownloadOptions" />

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:divider="#AAA"
                            android:orientation="horizontal"
                            android:paddingTop="8dp"
                            android:paddingBottom="16dp"
                            android:showDividers="middle">

                            <LinearLayout
                                android:layout_width="180dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="24dp"
                                android:layout_marginRight="24dp"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Changement de Fond d'écran"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Toutes les heures"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="180dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="24dp"
                                android:layout_marginRight="24dp"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Téléchargement de photos"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Toutes les semaines"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="180dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="24dp"
                                android:layout_marginRight="24dp"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Détection de nouvelles photos"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Toutes les mois"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                            </LinearLayout>
                        </LinearLayout>
                    </HorizontalScrollView>
                </LinearLayout>
                <!-- Buttons (sync, scheduler, wallpaper) -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/SectionSync"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="12dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp">

                    <Button
                        android:id="@+id/ChooseOneButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/synchronize" />

                    <Button
                        android:id="@+id/ButtonWallpaper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Wallpaper une fois" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <!-- Last times -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lastTimesTitle"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <LinearLayout
                        android:id="@+id/lastUpdatePhotos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lastUpdatePhotosLabel" />

                        <TextView
                            android:id="@+id/lastUpdatePhotosTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="textEnd"
                            android:text="@string/noDate"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lastSync"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lastSyncLabel" />

                        <TextView
                            android:id="@+id/lastSyncTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="textEnd"
                            android:text="@string/noDate"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lastWallpaper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lastWallpaperTimeLabel" />

                        <TextView
                            android:id="@+id/lastWallpaperTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="textEnd"
                            android:text="@string/noDate"/>
                    </LinearLayout>
                </LinearLayout>

                <!-- Result -->
                <RelativeLayout
                    android:id="@+id/SectionResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/titleResult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titleResult"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <TextView
                        android:id="@+id/result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/titleResult"
                        android:text="@string/result" />
                </RelativeLayout>
                <!-- Stat -->
                <RelativeLayout
                    android:id="@+id/SectionStat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp">

                    <TextView
                        android:id="@+id/titleStat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titleStat"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <TextView
                        android:id="@+id/stat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/titleStat"
                        android:text="@string/noStat" />
                </RelativeLayout>
            </LinearLayout>
            <!-- Progress Bar -->
            <RelativeLayout
                android:id="@+id/pb_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#37FFFFFF"
                android:visibility="invisible">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="@style/Widget.AppCompat.ProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignWithParentIfMissing="false"
                    android:layout_centerInParent="true"
                    android:minWidth="128dp"
                    android:minHeight="128dp"
                    android:visibility="visible" />
            </RelativeLayout>
        </FrameLayout>
    </ScrollView>
</LinearLayout>
